--- a/story.html
+++ b/story.html
@@ -78,32 +78,32 @@
             <p>あらすじ: 霧と影に生まれし姉弟、NebelfeeとSchattenfeeは、グリダニアの深奥で運命に導かれ、エオルゼアの危機に立ち向かうための力を育む。</p>
         </section>
         <section class="story starfall arr-effect">
-            <h2><a href="story-a-realm-reborn.html">新生エオルゼア</a></h2>
+            <h2><a href="arr.html">新生エオルゼア</a></h2>
             <p>新たなる大地に響き合う魂。</p>
             <p>あらすじ: 霧と影、二つの魂がエオルゼアの大地を駆け抜け、蛮神の咆哮とクリスタルタワーの封印に挑む。仲間と共に帝国の野望を砕き、アルテマウェポンの脅威に立ち向かう旅が、ここに始まる。</p>
         </section>
         <section class="story starfall hw-effect">
-            <h2><a href="story-heavensward.html">蒼天のイシュガルド</a></h2>
+            <h2><a href="hs.html">蒼天のイシュガルド</a></h2>
             <p>蒼空に舞う霧と影の刃。</p>
             <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドでニーズヘッグや教皇の野望に挑み、フォルタン家、天騎士団、暁の仲間と共に蒼天の真実を求める。アレキサンダーの鼓動が響き、聖騎士の誓いが試される旅が始まる。</p>
         </section>
         <section class="story starfall sb-effect">
-            <h2><a href="story-stormblood.html">紅蓮の解放者</a></h2>
+            <h2><a href="sb.html">紅蓮の解放者</a></h2>
             <p>紅蓮の炎に燃える霧と影の絆。</p>
             <p>あらすじ: NebelfeeとSchattenfeeはドマとアラミゴを巡り、帝国の圧政と蛮神の脅威に挑む。ヒエンやユウギリ、暁の仲間と共にゼノスと神龍を倒し、オメガの試練を乗り越え、紅蓮の自由を勝ち取る旅が始まる。</p>
         </section>
         <section class="story starfall shb-effect">
-            <h2><a href="story-shadowbringers.html">漆黒のヴィランズ</a></h2>
+            <h2><a href="shb.html">漆黒のヴィランズ</a></h2>
             <p>漆黒の夜を貫く霧と影の光。</p>
             <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰い・エデンとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
         </section>
         <section class="story starfall ew-effect">
-            <h2><a href="story-endwalker.html">暁月の終焉</a></h2>
+            <h2><a href="ew.html">暁月の終焉</a></h2>
             <p>星海に響く霧と影の終幕。</p>
             <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、パンデモニウムの謎を解きながら暁月の希望を求める。</p>
         </section>
         <section class="story starfall dt-effect">
-            <h2><a href="story-dawntrail.html">黄金のレガシー</a></h2>
+            <h2><a href="dt.html">黄金のレガシー</a></h2>
             <p>黄金の大地に刻む霧と影の誓い。</p>
             <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
         </section>
